crates/math-core/tests/snapshots/conversion_test__text_size_no_braces.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text\\large x"
---
<math>
    <mrow></mrow>
    <mi>x</mi>
</math>
