crates/math-core/tests/snapshots/conversion_test__text_spaces.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{x\\;x\\:x\\,x\\>x\\ x~x}"
---
<math>
    <mtext>x x x x x x x</mtext>
</math>
