crates/math-core/tests/snapshots/conversion_test__text_transform_sup.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathbb{N} \\cup \\mathbb{N}^+"
---
<math>
    <mi>ℕ</mi>
    <mo>∪</mo>
    <msup>
        <mi>ℕ</mi>
        <mo>+</mo>
    </msup>
</math>
