crates/math-core/tests/snapshots/conversion_test__text_transforms.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "{fi}\\ \\mathit{fi}\\ \\mathrm{fi}\\ \\texttt{fi}"
---
<math>
    <mrow>
        <mi>f</mi>
        <mi>i</mi>
    </mrow>
    <mtext> </mtext>
    <mpadded><mi>𝑓𝑖</mi></mpadded>
    <mtext> </mtext>
    <mpadded><mi>fi</mi></mpadded>
    <mtext> </mtext>
    <mtext><code>fi</code></mtext>
</math>
