crates/math-core/tests/snapshots/conversion_test__text_with_comment.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{x %comment\n   y}"
---
<math>
    <mtext>x y</mtext>
</math>
