crates/math-core/tests/snapshots/conversion_test__text_with_comment_no_space_before.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{x%comment\n   y}"
---
<math>
    <mtext>xy</mtext>
</math>
