crates/math-core/tests/snapshots/conversion_test__text_with_escape_brace.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{a\\}b}"
---
<math>
    <mtext>a}b</mtext>
</math>
