crates/math-core/tests/snapshots/conversion_test__text_with_special_symbols.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{!\"\\#\\$\\%'()*+,-./:;=?@[]`|}"
---
<math>
    <mtext>!”#$%’()*+,-./:;=?@[]‘|</mtext>
</math>
