crates/math-core/tests/snapshots/conversion_test__text_with_unsupported_math_symbol.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{x ⇦ y}"
---
<math>
    <mtext>x ⇦ y</mtext>
</math>
